templates/sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sidekiq
  template:
    metadata:
      labels:
        app: sidekiq
    spec:
      containers:
      - name: sidekiq
        image: abraverm/discourse
        command: ["bundle", "exec", "sidekiq"]
        volumeMounts:
          - mountPath: "/var/www/discourse"
            name: discourse
        resources:
          limits:
            cpu: 2
            memory: 4Gi
      volumes:
        - name: discourse
#          emptyDir: {}
          persistentVolumeClaim:
            claimName: discourse
        - name: scripts
          configMap:
            name: discourse
