templates/web.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: discourse
  annotations:
    description: Defines how to deploy Discourse all in one
spec:
  replicas: 2
  selector:
    matchLabels:
      app: discourse
  template:
    metadata:
      labels:
        app: discourse
    spec:
      containers:
      - name: discourse
        image: abraverm/discourse
        imagePullPolicy: Always
#        image: " "
        command: ["/var/www/discourse/bin/unicorn"]
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
          - mountPath: "/var/www/discourse"
            name: discourse
        resources:
          limits:
            cpu: 2
            memory: 4Gi
      volumes:
        - name: discourse
          persistentVolumeClaim:
            claimName: discourse
        - name: scripts
          configMap:
            name: discourse
