templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: discourse
  annotations:
    description: Exposes and load balances the application pods
spec:
  type: LoadBalancer
  selector:
    app: discourse
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8080
    protocol: TCP
